修复 条件选择  时间条件偶发性 错误